updated background color on stylesheet

--- a/style.css
+++ b/style.css
@@ -47,5 +47,5 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
 input, select { vertical-align: middle; }
 
 body {
-background-color:66FFFF, 0.5; 
+background-color:#66FFFF; 
 }
